added the first blog

--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>My simple website</title>
+  <link rel="stylesheet" href="styles/blog.css">
 </head>
 <body>
-  
+  <div>
+    <h3>My first website</h3>
+    <p>CSS stands for Cascading Stylesheets. The cascade is the algorithm for solving conflicts where multiple CSS rules apply to an HTML element. It's the reason that the text of the button styled with the following CSS will be blue.</p>
+  </div>
 </body>
 </html>
