--- a/index.html
+++ b/index.html
@@ -11,5 +11,17 @@
     <h3>My first website</h3>
     <p>CSS stands for Cascading Stylesheets. The cascade is the algorithm for solving conflicts where multiple CSS rules apply to an HTML element. It's the reason that the text of the button styled with the following CSS will be blue.</p>
   </div>
+  <div>
+    <h3>My first website</h3>
+    <p>CSS stands for Cascading Stylesheets. The cascade is the algorithm for solving conflicts where multiple CSS rules apply to an HTML element. It's the reason that the text of the button styled with the following CSS will be blue.</p>
+  </div>
+  <div>
+    <h3>My first website</h3>
+    <p>CSS stands for Cascading Stylesheets. The cascade is the algorithm for solving conflicts where multiple CSS rules apply to an HTML element. It's the reason that the text of the button styled with the following CSS will be blue.</p>
+  </div>
+  <div>
+    <h3>My first website</h3>
+    <p>CSS stands for Cascading Stylesheets. The cascade is the algorithm for solving conflicts where multiple CSS rules apply to an HTML element. It's the reason that the text of the button styled with the following CSS will be blue.</p>
+  </div>
 </body>
 </html>
