--- a/index.html
+++ b/index.html
@@ -23,5 +23,13 @@
     <h3>My first website</h3>
     <p>CSS stands for Cascading Stylesheets. The cascade is the algorithm for solving conflicts where multiple CSS rules apply to an HTML element. It's the reason that the text of the button styled with the following CSS will be blue.</p>
   </div>
+  <div>
+    <h3>You to push incremental code</h3>
+    <ul>
+      <li>git add .</li>
+      <li>git commit -m"add a meaningful commit message"</li>
+      <li>git push</li>
+    </ul>
+  </div>
 </body>
 </html>
