added peachu's picture

--- a/index.html
+++ b/index.html
@@ -31,5 +31,9 @@
       <li>git push</li>
     </ul>
   </div>
+  <div>
+    <h3>Sitting Peachu</h3>
+    <img src="images/sitting peachu.png" alt="">
+  </div>
 </body>
 </html>
